# poai

./: README.md  setup.cfg
demo/: chatgpt_test.py  exe.py  result.txt
dev/: tongyi.py  tongyi_pip.py
poai/: __init__.py
poai/api/: aiart.py  chat.py  chatgpt.py
poai/core/: AIArt.py  DeepSeek.py  TongYi.py  ZhiPu.py  moonshot.py
poai/lib/: Const.py
script/: allpackages.txt  clean.sh
tests/: __init__.py  test_chat.py  test_tools.py
