[metadata]
name = poai
version = 0.0.9
description = pip install poai
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.python-office.com/
author = CoderWanFeng
author_email = 1957875073@qq.com
license = MIT
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/CoderWanFeng/poai/issues
    Documentation = https://github.com/CoderWanFeng/poai/blob/main/README.md
    Source Code = https://github.com/CoderWanFeng/poai

[options]
packages = find:
install_requires =
    openai
    Pillow
    tencentcloud-sdk-python


python_requires = >=3.7
include_package_data = True
zip_safe = False

